2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Properly detect G++.
	* hash.hh: Properly detect G++.
	* semaphore.hh,
	* utime.hh,
	* lockable.hh,
	* containers.hxx: Aesthetic changes.

2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Improve Windows compatibility.
	* windows.hh: Move to...
	* windows.h: ... this. Because this header isn't specific for C++.
	* README: Update accordingly.
	* libport.mk: Update accordingly.

	* detect_win32.h: New. Defines WIN32 when using MS VC++.
	* network.h: New. Wrap include issues for UNIX/Windows.

	* lockable.hh,
	* semaphore.hh,
	* thread.hh,
	* utime.hh: Update includes. LIBPORT_WIN32 doesn't exist.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	libport/windows.hh
	* windows.hh: New.
	* README, libport.mk, semaphore.hh, thread.hh, utime.hh:
	Adjust.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Restyle
	* ull-fixed-point.hh: here.

2006-11-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Test whether LIBPORT_WIN32 is defined when looking for WIN32.
	Because config.h's define might be prefixed by "LIBPORT_", we look for
	either LIBPORT_WIN32 or just WIN32.
	* lockable.hh,
	* semaphore.hh,
	* thread.hh,
	* utime.hh: Here.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't use LARGE_INTEGER. Use __int64 instead.
	See:
	http://msdn.microsoft.com/library/default.asp
	 `-> ?url=/library/en-us/winprog/winprog/large_integer_str.asp
	This works for sure on mingw/cygwin and MSVC++ which is enough for us.
	* utime.hh: Here.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix includes.
	* lockable.hh: win32.h doesn't exist, include windows.h instead.
	* utime.hh: Be careful since _WIN32_WINNT can be already defined.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* hash.hh, tests/singleton2.cc, uffloat.hh,
	* ull-fixed-point.cc, ulong-fixed-point.hh: Run reindent.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Clean valgrind files